# nifty_submodule_cookiecutter

./: .appveyor.yml  .travis.yml  README.md  cookiecutter.json
{{cookiecutter.github_project_name}}/: .travis.yml  CMakeLists.txt  CONTRIBUTING.rst  HISTORY.rst  LICENSE  README.rst
{{cookiecutter.github_project_name}}/docs/: Doxyfile  environment.yml
{{cookiecutter.github_project_name}}/docs/source/: conf.py  index.rst  readme.rst
{{cookiecutter.github_project_name}}/include/nifty/{{cookiecutter.cpp_submod_folder_name}}/: {{ cookiecutter.submod_name  }}.hpp
{{cookiecutter.github_project_name}}/src/docs/: CMakeLists.txt
{{cookiecutter.github_project_name}}/src/examples/: example_1.cpp  example_2.cpp
{{cookiecutter.github_project_name}}/src/tests/: CMakeLists.txt  test_nifty_{{ cookiecutter.submod_name }}_a.cpp
